# TonCoin-Wallet-Desktop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  mywindow.cpp  mywindow.h
src/Modules/UIComponents/: CMakeLists.txt
src/Modules/UIComponents/UIComponents/Button/: MyButton.cpp
src/Modules/UIComponents/UIComponents/Theme/: MyThemeManager.cpp
src/Modules/UICreateWallet/: CMakeLists.txt
src/Translations/: en_US.ts
src/modules/UIComponents/: CMakeLists.txt
src/modules/UIComponents/UIComponents/button/: MyButton.cpp  MyButton.h
src/modules/UIComponents/UIComponents/color/: MyColors.h
src/modules/UIComponents/UIComponents/label/: MyLabel.cpp  MyLabel.h
src/modules/UIComponents/UIComponents/theme/: MyStyleSheet.h
src/modules/UIComponents/button/: MyButton.cpp  MyButton.h
src/modules/UIComponents/label/: MyLabel.cpp  MyLabel.h
src/modules/UICreateWallet/: CMakeLists.txt
src/modules/UICreateWallet/UICreateWallet/screens/IntroScreen/: IntroScreen.cpp
src/modules/UICreateWallet/screens/IntroScreen/: IntroScreen.cpp  IntroScreen.h
src/modules_tmp/UIComponents/: CMakeLists.txt
src/modules_tmp/UIComponents/UIComponents/theme_tmp/: MyThemeManager.h
src/translations/: translations.qrc
src/translations_tmp/: en_US.ts
toncoin_wallet/: main.cpp  my_window.cpp  my_window.h
toncoin_wallet/assets/: assets.qrc
toncoin_wallet/modules/qtlottie/: CMakeLists.txt
toncoin_wallet/modules/ui_components/: CMakeLists.txt
toncoin_wallet/modules/ui_components/ui_components/animation/: my_animation.cpp  my_animation.h
toncoin_wallet/modules/ui_components/ui_components/button/: my_bottom_actions.cpp  my_bottom_actions.h  my_button.cpp  my_button.h
toncoin_wallet/modules/ui_components/ui_components/color/: my_colors.h
toncoin_wallet/modules/ui_components/ui_components/label/: my_label.cpp  my_label.h
toncoin_wallet/modules/ui_components/ui_components/navigator/: my_navigator.cpp  my_navigator.h
toncoin_wallet/modules/ui_components/ui_components/screen/: my_screen.cpp  my_screen.h
toncoin_wallet/modules/ui_components/ui_components/theme/: my_style_sheet.h  my_styled_widget.cpp  my_styled_widget.h  my_theme_manager.cpp  my_theme_manager.h
toncoin_wallet/modules/ui_create_wallet/: CMakeLists.txt
toncoin_wallet/modules/ui_create_wallet/ui_create_wallet/screens/congratulations/: congratulations_screen.cpp  congratulations_screen.h
toncoin_wallet/modules/ui_create_wallet/ui_create_wallet/screens/intro/: intro_screen.cpp  intro_screen.h
toncoin_wallet/translations/: en_US.ts
